@@ -75,8 +75,8 @@ if (( $NRAGENTS % 2 == 0)) ; then
 fi
 
 SFRE=1.0
-COMP=2000
-KEEP=1000
+COMP=500
+KEEP=2000
 if [ -z "$ONGOING_PORTS" ] ; then
   CO_BASE=$(( $PORT_OFFSET + 8530 ))
   DB_BASE=$(( $PORT_OFFSET + 8629 ))
